@@ -36,6 +36,7 @@ v 8.11.0 (unreleased)
   - Make error pages responsive (Takuya Noguchi)
   - Change requests_profiles resource constraint to catch virtually any file
   - Reduce number of queries made for merge_requests/:id/diffs
+  - Ignore invalid IPs in X-Forwarded-For when trusted proxies are configured.
 
 v 8.10.3 (unreleased)
   - Fix hooks missing on imported GitLab projects
